corrected libsmbclient priority to optional. Closes: #310045
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@729 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/control
+++ b/control
@@ -136,7 +136,7 @@ Description: pluggable authentication module for SMB password database
 
 Package: libsmbclient
 Section: libs
-Priority: extra
+Priority: optional
 Architecture: any
 Depends: ${shlibs:Depends}
 Description: shared library that allows applications to talk to SMB servers
