corrected the path of ServerType.html in smb.conf. Closes: #296500
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@730 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/smb.conf
+++ b/smb.conf
@@ -71,8 +71,8 @@
 
 # "security = user" is always a good idea. This will require a Unix account
 # in this server for every user accessing the server. See
-# /usr/share/doc/samba-doc/htmldocs/ServerType.html in the samba-doc
-# package for details.
+# /usr/share/doc/samba-doc/htmldocs/Samba-HOWTO-Collection/ServerType.html
+# in the samba-doc package for details.
 ;   security = user
 
 # You may wish to use password encryption.  See the section on
