--- a/control.in
+++ b/control.in
@@ -43,7 +43,7 @@ Description: a LanManager-like file and printer server for Unix
 Package: samba-common
 Architecture: any
 Depends: libpam-modules, ${shlibs:Depends}, ${misc:Depends}
-Replaces: samba (<< 2.999+3.0.alpha21-4)
+Replaces: samba (<< 3.0.20b-1)
 Description: Samba common files used by both the server and the client
  The Samba software suite is a collection of programs that
  implements the SMB protocol for unix systems, allowing you to serve
