quick fix, buildable again on ia64
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@764 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/rules
+++ b/rules
@@ -26,7 +26,7 @@ export DEB_BUILD_GNU_TYPE
 export DEB_HOST_ARCH_OS
 
 # Support the DEB_BUILD_OPTIONS variable
-CFLAGS = -gstabs -Wall
+CFLAGS = -g -Wall
 INSTALL = install
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
