libpam-smbpass dependency on samba-common; #297923
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@768 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/control.in
+++ b/control.in
@@ -127,7 +127,7 @@ Package: libpam-smbpass
 Section: admin
 Priority: extra
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, samba-common (= ${Source-Version})
 Suggests: samba
 Description: pluggable authentication module for SMB password database
  This is a stackable PAM module that allows a system administrator to easily
