--- a/rules
+++ b/rules
@@ -258,8 +258,7 @@ binary-indep: build install
 	dh_testroot
 	dh_installdebconf
 	dh_installdocs -A debian/README.build
-	# dh_installexamples is not available in Debian Potato...
-	[ -x /usr/bin/dh_installexamples ] && DH_OPTIONS= dh_installexamples -v -psamba-doc examples/*
+	dh_installexamples
 #	dh_installmenu
 #	dh_installemacsen
 #	dh_installpam
@@ -294,8 +293,7 @@ binary-arch: build install
 	dh_testroot
 	dh_installdebconf
 	dh_installdocs -A debian/README.build
-	# dh_installexamples is not available in Debian Potato...
-	[ -x /usr/bin/dh_installexamples ] && DH_OPTIONS= dh_installexamples -v -ppython2.3-samba source/python/examples/*
+	dh_installexamples
 #	dh_installmenu
 	# dh_installlogrotate is not available in Debian Potato...
 	if [ -x /usr/bin/dh_installlogrotate ]; then \
