Fix the passwd chat string after checking that the suggested fix works
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@773 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/smb.conf
+++ b/smb.conf
@@ -94,10 +94,10 @@
 ;   unix password sync = no
 
 # For Unix password sync to work on a Debian GNU/Linux system, the following
-# parameters must be set (thanks to Augustin Luton <aluton@hybrigenics.fr> for
-# sending the correct chat script for the passwd program in Debian Potato).
+# parameters must be set (thanks to Ian Kahan <<kahan@informatik.tu-muenchen.de> for
+# sending the correct chat script for the passwd program in Debian Sarge).
    passwd program = /usr/bin/passwd %u
-   passwd chat = *Enter\snew\sUNIX\spassword:* %n\n *Retype\snew\sUNIX\spassword:* %n\n .
+   passwd chat = *Enter\snew\sUNIX\spassword:* %n\n *Retype\snew\sUNIX\spassword:* %n\n *password\supdated\ssuccessfully* .
 
 # This boolean controls whether PAM will be used for password changes
 # when requested by an SMB client instead of the program listed in
