Add var/log/samba to winbind directories. Closes: #340833 Add a dependency on samba-common for winbind
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@779 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/control
+++ b/control
@@ -165,7 +165,7 @@ Package: winbind
 Section: net
 Priority: optional
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, samba-common (= ${Source-Version})
 Replaces: samba (<= 2.2.3-2)
 Description: service to resolve user and group information from Windows NT servers
  This package provides the winbindd daemon, which provides a
