A first round of lintian cleaning: -ignore invalid-arch-string-in-source-relation in source -ignore configure-generated-file-in-source in source -correct the FSF address in debian/copyright -add a dependency on netbase for swat -ignore the non-standard-dir-perm for samba log directory -ignore the script-not-executable warning for python2.3-samba
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@781 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/control.in
+++ b/control.in
@@ -74,7 +74,7 @@ Description: a LanManager-like simple client for Unix
 
 Package: swat
 Architecture: any
-Depends: samba (= ${Source-Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: samba (= ${Source-Version}), ${shlibs:Depends}, ${misc:Depends}, netbase
 Recommends: samba-doc
 Description: Samba Web Administration Tool
  The Samba software suite is a collection of programs that
