--- a/control
+++ b/control
@@ -9,6 +9,7 @@ Standards-Version: 3.6.2
 Package: samba
 Architecture: any
 Depends: samba-common (= ${Source-Version}), netbase, logrotate, ${shlibs:Depends}, ${misc:Depends}, libpam-runtime (>= 0.76-13.1), libpam-modules, lsb-base (>= 3.0-6)
+Recommends: smbldap-tools
 Replaces: samba-common (<= 2.0.5a-2)
 Suggests: samba-doc
 Description: a LanManager-like file and printer server for Unix
@@ -127,7 +128,7 @@ Package: libpam-smbpass
 Section: admin
 Priority: extra
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, samba-common (= ${Source-Version})
 Suggests: samba
 Description: pluggable authentication module for SMB password database
  This is a stackable PAM module that allows a system administrator to easily
@@ -165,7 +166,7 @@ Package: winbind
 Section: net
 Priority: optional
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, samba-common (= ${Source-Version})
+Depends: samba-common (= ${Source-Version}), ${shlibs:Depends}, ${misc:Depends}
 Replaces: samba (<= 2.2.3-2)
 Description: service to resolve user and group information from Windows NT servers
  This package provides the winbindd daemon, which provides a
