--- a/rules
+++ b/rules
@@ -312,6 +312,8 @@ binary-arch: build install
 #	dh_installmanpages
 #	dh_installinfo
 	cp debian/winbind.lintian debian/winbind/usr/share/lintian/overrides/winbind
+	cp debian/samba.lintian debian/samba/usr/share/lintian/overrides/samba
+	cp debian/python2.3-samba.lintian debian/samba/usr/share/lintian/overrides/python2.3-samba
 #	dh_undocumented
 	dh_installchangelogs -Nlibpam-smbpass
 	DH_OPTIONS= dh_installchangelogs -plibpam-smbpass source/pam_smbpass/CHANGELOG
