Lintian overrides for smbfs: we really want to add setuid binaries, man.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@783 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/rules
+++ b/rules
@@ -314,6 +314,7 @@ binary-arch: build install
 	cp debian/winbind.lintian debian/winbind/usr/share/lintian/overrides/winbind
 	cp debian/samba.lintian debian/samba/usr/share/lintian/overrides/samba
 	cp debian/python2.3-samba.lintian debian/samba/usr/share/lintian/overrides/python2.3-samba
+	cp debian/smbfs.lintian debian/samba/usr/share/lintian/overrides/smbfs
 #	dh_undocumented
 	dh_installchangelogs -Nlibpam-smbpass
 	DH_OPTIONS= dh_installchangelogs -plibpam-smbpass source/pam_smbpass/CHANGELOG
