--- a/rules
+++ b/rules
@@ -221,8 +221,6 @@ endif
 	ln -s ../../doc/samba-doc/htmldocs/using_samba \
 	      $(DESTDIR)/usr/share/samba/swat/using_samba
 
-	# Delete unwanted stuff leftover from "make install"
-
 	# The smbwrapper package is not being generated anymore, so we must
 	#	delete the related man pages.
 	rm $(DESTDIR)/usr/share/man/man1/smbsh.1
@@ -259,6 +257,11 @@ binary-indep: build install
 	dh_installdebconf
 	dh_installdocs -A debian/README.build
 	dh_installexamples
+
+	# Remove an extra copy of the GPL licence in smbldap-tools example
+	# directory. Thanks lintian, for noticing
+	rm debian/samba-doc/usr/share/doc/samba-doc/examples/LDAP/smbldap-tools-0.9.1/COPYING.gz
+
 #	dh_installmenu
 #	dh_installemacsen
 #	dh_installpam
