--- a/rules
+++ b/rules
@@ -258,7 +258,7 @@ binary-indep: build install
 	dh_installdocs -A debian/README.build
 	# Ignore COPYING. Otherwise, an extra copy of the GPL licence 
 	# in smbldap-tools example is included in samba-doc
-	dh_installexamples -XCOPYING
+	dh_installexamples -Xsmbldap-tools-*
 #	dh_installmenu
 #	dh_installemacsen
 #	dh_installpam
