Preserve admin settings in /etc/default/samba
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@795 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/samba.config
+++ b/samba.config
@@ -5,6 +5,9 @@
 # Source debconf library.
 . /usr/share/debconf/confmodule
 
+DEFAULTRUNMODE="daemons"
+RCFILE=/etc/default/samba
+
 # Function for grabbing a parameter from an smb.conf file
 smbconf_retr() {
 	if [ -z "$1" ]; then
@@ -27,6 +30,20 @@ smbconf_retr() {
 	| tail -n 1
 }
 
+read_rcfile() {
+    # Default values
+    if [ -f $RCFILE ]; then
+	RUN_MODE="$DEFAULTRUNMODE"
+	. $RCFILE || true
+    fi
+}
+
+set_debconf() {
+    if [ "$RUN_MODE" ]; then
+        db_set samba/run_mode "$RUN_MODE" || true
+    fi
+}
+
 FILE=/etc/samba/smb.conf
 
 db_title "Samba Server"
@@ -38,6 +55,12 @@ then
 	db_go
 fi
 
+
+# We first read the settings file
+# in order to get admin-modified settings
+read_rcfile
+# Debconf-stored values are updated accordingly
+set_debconf
 db_input medium samba/run_mode || true
 db_go
 
