Changes suggested by Steve
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@796 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/samba.config
+++ b/samba.config
@@ -5,7 +5,6 @@
 # Source debconf library.
 . /usr/share/debconf/confmodule
 
-DEFAULTRUNMODE="daemons"
 RCFILE=/etc/default/samba
 
 # Function for grabbing a parameter from an smb.conf file
@@ -33,13 +32,12 @@ smbconf_retr() {
 read_rcfile() {
     # Default values
     if [ -f $RCFILE ]; then
-	RUN_MODE="$DEFAULTRUNMODE"
 	. $RCFILE || true
     fi
 }
 
 set_debconf() {
-    if [ "$RUN_MODE" ]; then
+    if [ -n "$RUN_MODE" ]; then
         db_set samba/run_mode "$RUN_MODE" || true
     fi
 }
