--- a/control.in
+++ b/control.in
@@ -100,6 +100,7 @@ Description: Samba documentation
 Package: samba-doc-pdf
 Section: doc
 Architecture: all
+Suggests: samba-doc-pdf
 Description: Samba documentation (PDF format)
  The Samba software suite is a collection of programs that
  implements the SMB protocol for unix systems, allowing you to serve
