[ Christian Perrier ]    * Remove the smbldap-tools-* directory from the examples of samba-doc      as these tools exist as an independent package. Closes: #341934    * Swedish debconf translation update. Closes: #342022    * Preserve the local admin settings for run_mode in /etc/default/samba      when upgrading. Closes: #234038, #267988, #269735    * Winbind also must depend on lsb-base. Closes: #343379    * Enable swat in inetd when installing it and remove it when      uninstalling. Closes: #87905, #230936, #268429    [ Peter Eisentraut ]    * Added separate samba-doc-pdf package, suggested by samba-doc.      Closes: #281971    * Removed duplicate documentation in swat package, symlinked to      samba-doc; swat now depends on samba-doc. Closes: #233447
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@803 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/control
+++ b/control
@@ -175,7 +175,7 @@ Package: winbind
 Section: net
 Priority: optional
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, samba-common (= ${Source-Version}), lsb-base (>= 3.0-6)
 Replaces: samba (<= 2.2.3-2)
 Description: service to resolve user and group information from Windows NT servers
  This package provides the winbindd daemon, which provides a
