Open a new changelog entry and really make samba-doc suggest samba-doc-pdf
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@805 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/control.in
+++ b/control.in
@@ -87,6 +87,7 @@ Description: Samba Web Administration Tool
 Package: samba-doc
 Section: doc
 Architecture: all
+Suggests: samba-doc
 Description: Samba documentation
  The Samba software suite is a collection of programs that
  implements the SMB protocol for unix systems, allowing you to serve
