--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,3 +1,1 @@
-[type: gettext/rfc822deb] samba-common.templates
-[type: gettext/rfc822deb] samba.templates
-[type: gettext/rfc822deb] swat.templates
+[type: gettext/rfc822deb] samba4-server.templates
