--- a/rules
+++ b/rules
@@ -3,7 +3,7 @@
 # Made with the aid of debmake, by Christoph Lameter,
 # based on the sample debian/rules file for GNU hello by Ian Jackson.
 
-SOURCEPATH=../source
+SOURCEPATH=./source
 
 package=samba
 
