Run "make quicktest" on build.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@836 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/rules
+++ b/rules
@@ -36,6 +36,7 @@ build-stamp: configure
 	-$(MAKE) -C $(SOURCEPATH) pch
 	$(MAKE) -C $(SOURCEPATH) all
 	$(MAKE) -C $(SOURCEPATH)/pidl all
+	$(MAKE) -C $(SOURCEPATH) buildtest
 	touch $@
 
 clean:
