Add (untested) code and templates for Samba 3 upgrading in config.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@840 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/samba.config
+++ b/samba.config
@@ -6,6 +6,19 @@ set -e
 
 db_title "Samba Server"
 
+# See if we're upgrading from Samba 3
+if [ "$1" == "configure" -a ! -z "$2" ]; then
+	if dpkg --compare-versions "$2" lt "3.9.0"; then
+		db_input samba/upgrade-from-v3 || true
+		db_go || true
+
+		db_get samba/upgrade-from-v3
+		if [ "$RET" = "true" ]; then
+			exit
+		fi
+	fi
+fi
+
 db_input medium samba4-server/setup-pdc || true
 db_go || true
 
