s/samba4-server/samba/ in config script; seems like these went unnoticed.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@841 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/samba.config
+++ b/samba.config
@@ -19,22 +19,22 @@ if [ "$1" == "configure" -a ! -z "$2" ]; then
 	fi
 fi
 
-db_input medium samba4-server/setup-pdc || true
+db_input medium samba/setup-pdc || true
 db_go || true
 
-db_get samba4-server/setup-pdc
+db_get samba/setup-pdc
 
 if [ "$RET" = "true" ]; then
-	db_input medium samba4-server/realm || true
+	db_input medium samba/realm || true
 	db_go || true
 
-	db_input medium samba4-server/domain || true
+	db_input medium samba/domain || true
 	db_go || true
 
-	db_input medium samba4-server/password || true
+	db_input medium samba/password || true
 	db_go || true
 	
-	db_input medium samba4-server/done || true
+	db_input medium samba/done || true
 	db_go || true
 fi
 
