--- a/rules
+++ b/rules
@@ -36,7 +36,7 @@ build-stamp: configure
 	-$(MAKE) -C $(SOURCEPATH) pch
 	$(MAKE) -C $(SOURCEPATH) all
 	$(MAKE) -C $(SOURCEPATH)/pidl all
-	$(MAKE) -C $(SOURCEPATH) buildtest
+	$(MAKE) -C $(SOURCEPATH) quicktest
 	touch $@
 
 clean:
