--- a/samba.config
+++ b/samba.config
@@ -7,7 +7,7 @@ set -e
 db_title "Samba Server"
 
 # See if we're upgrading from Samba 3
-if [ "$1" == "configure" -a ! -z "$2" ]; then
+if [ "$1" = "configure" -a ! -z "$2" ]; then
 	if dpkg --compare-versions "$2" lt "3.9.0"; then
 		db_input samba/upgrade-from-v3 || true
 		db_go || true
