--- a/rules
+++ b/rules
@@ -81,7 +81,7 @@ binary-arch: build install
 	dh_compress -a
 	dh_fixperms -a
 	dh_makeshlibs -a
-	dh_installinit -a --name=samba
+	dh_installinit -a 
 	dh_installdebconf -a
 	dh_installdeb -a
 	dh_shlibdeps -a
