* Don't ask about an administrator password -- just let the provisioning   scripts make up a random one. * Updated README.Debian to show the user how to change the password. * Make samba recommend ldb-tools.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@862 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/control
+++ b/control
@@ -62,7 +62,7 @@ Description: test suite from Samba 4
  
 Package: samba
 Architecture: any
-Recommends: swat
+Recommends: swat, ldb-tools
 Depends: ${shlibs:Depends}, samba-common, debconf
 Description: LanManager-like file and printer server for Unix (version 4)
  The Samba software suite is a collection of programs that
