--- a/rules
+++ b/rules
@@ -28,9 +28,7 @@ configure-stamp:
 build: build-stamp
 build-stamp: configure
 	dh_testdir
-	$(MAKE) -C $(SOURCEPATH) proto 
-	-$(MAKE) -C $(SOURCEPATH) pch
-	$(MAKE) -C $(SOURCEPATH) all
+	$(MAKE) -C $(SOURCEPATH) pch all
 	$(MAKE) -C $(SOURCEPATH)/pidl all
 	touch $@
 
