Reinstate "make proto", since just "make pch all" triggers a build system bug currently (and "make proto pch all" is a lot better than "-make pch all ; make all" which seems to be the other workaround).
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@871 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/rules
+++ b/rules
@@ -28,7 +28,7 @@ configure-stamp:
 build: build-stamp
 build-stamp: configure
 	dh_testdir
-	$(MAKE) -C $(SOURCEPATH) pch all
+	$(MAKE) -C $(SOURCEPATH) proto pch all
 	$(MAKE) -C $(SOURCEPATH)/pidl all
 	touch $@
 
