Change the order of the makes _yet again_; this time, I've verified that "make -C source pch all" does indeed break, while "make -C source pch ; make -C source all" seems to work, so I'm killing the proto part and splitting them again.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@879 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/rules
+++ b/rules
@@ -27,7 +27,8 @@ configure-stamp:
 build: build-stamp
 build-stamp: configure
 	dh_testdir
-	$(MAKE) -C $(SOURCEPATH) proto pch all
+	$(MAKE) -C $(SOURCEPATH) pch
+	$(MAKE) -C $(SOURCEPATH) all
 	$(MAKE) -C $(SOURCEPATH)/pidl all
 	touch $@
 
