Install README.building along with all the other documentation.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@881 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/rules
+++ b/rules
@@ -44,7 +44,7 @@ binary-indep: build install
 	dh_testdir
 	dh_testroot
 	dh_install -i --sourcedir=debian/tmp
-	dh_installdocs -i
+	dh_installdocs -i README.building
 	dh_installchangelogs -i
 	dh_compress -i
 	dh_fixperms -i
