Move /usr/lib/samba/setup from samba-common to samba. Make samba replace samba-common (<= 3.9.0+SVN12726-1)
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@896 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/control
+++ b/control
@@ -10,6 +10,7 @@ Package: samba
 Architecture: any
 Recommends: swat, ldb-tools
 Depends: ${shlibs:Depends}, samba-common, debconf
+Replaces: samba-common (<= 3.9.0+SVN12726-1)
 Description: LanManager-like file and printer server for Unix (version 4)
  The Samba software suite is a collection of programs that
  implements the SMB protocol for unix systems, allowing you to serve
