Implemented (but not tested!) the new bootstrapping code.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@901 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/samba.config
+++ b/samba.config
@@ -6,29 +6,30 @@ set -e
 
 db_title "Samba Server"
 
-# See if we're upgrading from Samba 3
-if [ "$1" = "configure" -a -n "$2" ]; then
+if [ "$1" == "configure" ]; then
+	#
+	# Are we upgrading from Samba 3, and already have a configuration file?
+	# If so, the user might want to try the automatic upgrading.
+	#
 	if dpkg --compare-versions "$2" lt "3.9.0"; then
-		db_input medium samba/upgrade-from-v3 || true
-		db_go || true
-
-		db_get samba/upgrade-from-v3
-		if [ "$RET" = "true" ]; then
-			exit
+		if [ -f /etc/samba/smb.conf ]; then
+			db_input medium samba/upgrade-from-v3 || true
+			db_go || true
 		fi
 	fi
+
+	#
+	# First-time installation, perhaps? If so, the user could want to
+	# set up Samba as a PDC, if the other parameters are in place.
+	#
+	db_get samba/realm || true
+	REALM="$RET"
+
+	db_get samba/domain || true
+	DOMAIN="$RET"
+
+	if [ -z "$2" -a -n "$REALM" -a -n "$DOMAIN" ]; then
+		db_input medium samba/setup-pdc || true
+		db_go || true
+	fi
 fi
-
-db_input medium samba/setup-pdc || true
-db_go || true
-
-db_get samba/setup-pdc
-
-if [ "$RET" = "true" ]; then
-	db_input medium samba/realm || true
-	db_go || true
-
-	db_input medium samba/domain || true
-	db_go || true
-fi
-
