Fix a bashism in the new config scripts (ugh).
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@904 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/samba.config
+++ b/samba.config
@@ -6,7 +6,7 @@ set -e
 
 db_title "Samba Server"
 
-if [ "$1" == "configure" ]; then
+if [ "$1" = "configure" ]; then
 	#
 	# Are we upgrading from Samba 3, and already have a configuration file?
 	# If so, the user might want to try the automatic upgrading.
