/realm and /domain are in samba-common now, not samba.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@906 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/samba.config
+++ b/samba.config
@@ -22,10 +22,10 @@ if [ "$1" = "configure" ]; then
 	# First-time installation, perhaps? If so, the user could want to
 	# set up Samba as a PDC, if the other parameters are in place.
 	#
-	db_get samba/realm || true
+	db_get samba-common/realm || true
 	REALM="$RET"
 
-	db_get samba/domain || true
+	db_get samba-common/domain || true
 	DOMAIN="$RET"
 
 	if [ -z "$2" -a -n "$REALM" -a -n "$DOMAIN" ]; then
