--- a/samba.config
+++ b/samba.config
@@ -11,7 +11,7 @@ if [ "$1" = "configure" ]; then
 	# Are we upgrading from Samba 3, and already have a configuration file?
 	# If so, the user might want to try the automatic upgrading.
 	#
-	if [ -n "$2" ] -a dpkg --compare-versions "$2" lt "3.9.0"; then
+	if [ -n "$2" ] && dpkg --compare-versions "$2" lt "3.9.0"; then
 		if [ -f /etc/samba/smb.conf ]; then
 			db_input medium samba/upgrade-from-v3 || true
 			db_go || true
