--- a/rules
+++ b/rules
@@ -48,6 +48,7 @@ binary-indep: build install
 	dh_installchangelogs -i
 	dh_compress -i
 	dh_fixperms -i
+	dh_installdebconf -i
 	dh_installdeb -i
 	dh_gencontrol -i
 	dh_md5sums -i
