Let samba-clients conflict/replace samba-common (<< 3.9.0), as they share /usr/bin/net.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@912 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/control
+++ b/control
@@ -44,8 +44,8 @@ Description: Samba 4 common files used by both the server and the client
 Package: samba-clients
 Architecture: any
 Depends: ${shlibs:Depends}
-Replaces: smbclient
-Conflicts: smbclient
+Replaces: smbclient, samba-common (<< 3.9.0)
+Conflicts: smbclient, samba-common (<< 3.9.0)
 Description: client utilities from Samba 4
  The Samba software suite is a collection of programs that
  implements the SMB protocol for unix systems, allowing you to serve
