Move testparm from samba into samba-common.
  * Make samba-common Architecture: any.
  * Make samba-common replace/conflict samba (<= 3.9.0+SVN12739-1).



git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@920 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/control
+++ b/control
@@ -25,7 +25,9 @@ Description: LanManager-like file and printer server for Unix (version 4)
  This package contains smbd, the Samba file, print and domain server.
 
 Package: samba-common
-Architecture: all
+Architecture: any
+Replaces: samba (<= 3.9.0+SVN12739-1)
+Conflicts: samba (<= 3.9.0+SVN12739-1)
 Description: Samba 4 common files used by both the server and the client
  The Samba software suite is a collection of programs that
  implements the SMB protocol for unix systems, allowing you to serve
