Make samba-clients depend on samba-common.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@921 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/control
+++ b/control
@@ -45,7 +45,7 @@ Description: Samba 4 common files used by both the server and the client
 
 Package: samba-clients
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, samba-common (=${Source-Version})
 Replaces: smbclient, samba-common (<< 3.9.0)
 Conflicts: smbclient, samba-common (<< 3.9.0)
 Description: client utilities from Samba 4
