--- a/control
+++ b/control
@@ -28,6 +28,7 @@ Package: samba-common
 Architecture: any
 Replaces: samba (<= 3.9.0+SVN12739-1)
 Conflicts: samba (<= 3.9.0+SVN12739-1)
+Depends: debconf
 Description: Samba 4 common files used by both the server and the client
  The Samba software suite is a collection of programs that
  implements the SMB protocol for unix systems, allowing you to serve
