--- a/rules
+++ b/rules
@@ -61,7 +61,7 @@ install: build
 	mkdir -p $(CURDIR)/debian/tmp/etc/samba
 	$(MAKE) -C $(SOURCEPATH) install DESTDIR=$(CURDIR)/debian/tmp
 	$(MAKE) -C $(SOURCEPATH) manpages installman DESTDIR=$(CURDIR)/debian/tmp
-	cp $(SOURCEPATH)/setup/{provision,upgrade} $(CURDIR)/debian/tmp/usr/lib/samba/setup
+	cp $(SOURCEPATH)/setup/{provision,upgrade,newuser} $(CURDIR)/debian/tmp/usr/lib/samba/setup
 	$(MAKE) -C $(SOURCEPATH)/pidl install DESTDIR=$(CURDIR)/debian/tmp
 
 binary-arch: build install
