Replace debconf dependencies with ${misc:Depends}, to automatically get the debconf-2.0 alternative right.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@929 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/control
+++ b/control
@@ -9,7 +9,7 @@ Build-Depends: libgtk2.0-dev, libgconf2-dev, debhelper (>> 5.0.0), libparse-yapp
 Package: samba
 Architecture: any
 Recommends: swat, ldb-tools
-Depends: ${shlibs:Depends}, samba-common, debconf | debconf-2.0
+Depends: ${shlibs:Depends}, ${misc:Depends}, samba-common
 Replaces: samba-common (<= 3.9.0+SVN12726-1)
 Description: LanManager-like file and printer server for Unix (version 4)
  The Samba software suite is a collection of programs that
@@ -28,7 +28,7 @@ Package: samba-common
 Architecture: any
 Replaces: samba (<= 3.9.0+SVN12739-1)
 Conflicts: samba (<= 3.9.0+SVN12739-1)
-Depends: debconf | debconf-2.0
+Depends: ${misc:Depends}
 Description: Samba 4 common files used by both the server and the client
  The Samba software suite is a collection of programs that
  implements the SMB protocol for unix systems, allowing you to serve
