Include NEWS file.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@931 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/rules
+++ b/rules
@@ -68,7 +68,7 @@ binary-arch: build install
 	dh_testdir
 	dh_testroot
 	dh_install -a --sourcedir=debian/tmp
-	dh_installdocs -a debian/README.building
+	dh_installdocs -a debian/README.building NEWS
 	dh_installchangelogs -a
 	dh_strip -a
 	dh_perl -a
