--- a/control
+++ b/control
@@ -84,6 +84,7 @@ Description: test suite from Samba 4
 Package: samba-gtk-frontends
 Architecture: any
 Depends: ${shlibs:Depends}
+Section: x11
 Description: graphical Samba client utilities
  The Samba software suite is a collection of programs that
  implements the SMB protocol for unix systems, allowing you to serve
@@ -121,6 +122,7 @@ Description: tools for viewing and manipulating the Windows registry
 Package: libparse-pidl-perl
 Architecture: any
 Depends: ${perl:Depends}
+Section: perl
 Description: IDL compiler written in Perl
  The Samba software suite is a collection of programs that
  implements the SMB protocol for unix systems, allowing you to serve
@@ -139,6 +141,7 @@ Description: IDL compiler written in Perl
 Package: samba-dev
 Architecture: any
 Depends: libparse-pidl-perl, libc6-dev, pkg-config (>= 0.14.0)
+Section: devel
 Description: tools for extending Samba
  The Samba software suite is a collection of programs that
  implements the SMB protocol for unix systems, allowing you to serve
