Remove useless (and annoying) patch-stamp requirement for build-stamp
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@942 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/rules
+++ b/rules
@@ -99,7 +99,7 @@ configure-stamp:
 
 	touch configure-stamp
 
-build: patch-stamp configure-stamp build-stamp
+build: configure-stamp build-stamp
 build-stamp:
 	dh_testdir
 
