Remove python_clean wchich is an indirect requirement of distclean anyway
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@943 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/rules
+++ b/rules
@@ -119,9 +119,7 @@ clean-patched:
 	rm -f build-stamp configure-stamp
 
 	# Clean first the Samba package
-#	-$(MAKE) -C source realclean
-#	-$(MAKE) -C source clean
-	-$(MAKE) -C source python_clean distclean
+	-$(MAKE) -C source distclean
 
 	# Delete stuff left after a build that is not deleted by 'make clean'
 	rm -f source/bin/wbinfo source/bin/winbindd source/bin/debug2html \
