build target should depend on configure otherwise the whole thing will never be patched. /me is really dumb with these -stamp things
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@950 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/rules
+++ b/rules
@@ -99,7 +99,7 @@ configure-stamp:
 
 	touch configure-stamp
 
-build: configure-stamp build-stamp
+build: configure build-stamp
 build-stamp:
 	dh_testdir
 
