--- a/rules
+++ b/rules
@@ -63,6 +63,8 @@ install: build
 	$(MAKE) -C $(SOURCEPATH) manpages installman DESTDIR=$(CURDIR)/debian/tmp
 	cp $(SOURCEPATH)/setup/{provision,upgrade,newuser} $(CURDIR)/debian/tmp/usr/lib/samba/setup
 	$(MAKE) -C $(SOURCEPATH)/pidl install DESTDIR=$(CURDIR)/debian/tmp
+	install -m 755 $(CURDIR)/debian/panic-action $(CURDIR)/debian/tmp/usr/share/samba
+	install -m 755 $(CURDIR)/debian/gdbcommands $(CURDIR)/debian/tmp/etc/samba
 
 binary-arch: build install
 	dh_testdir
