Patch the smb.conf template to use the panic-action script by default.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@954 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/rules
+++ b/rules
@@ -65,6 +65,7 @@ install: build
 	$(MAKE) -C $(SOURCEPATH)/pidl install DESTDIR=$(CURDIR)/debian/tmp
 	install -m 755 $(CURDIR)/debian/panic-action $(CURDIR)/debian/tmp/usr/share/samba
 	install -m 755 $(CURDIR)/debian/gdbcommands $(CURDIR)/debian/tmp/etc/samba
+	patch $(CURDIR)/debian/tmp/usr/lib/samba/setup/provision.smb.conf $(CURDIR)/debian/provision.smb.conf.patch
 
 binary-arch: build install
 	dh_testdir
