Put libsmbclient.h code back with a more descriptive comment... :-/
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@973 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/rules
+++ b/rules
@@ -286,6 +286,10 @@ binary-arch: build install
 	dh_compress
 	dh_fixperms
 
+	# Upstream makefile installs this using "install" without -m, so
+	# it becomes executable
+	chmod a-x debian/libsmbclient-dev/usr/include/libsmbclient.h
+
 ifeq ($(smbfs),yes)
 	# You may want to make some executables suid here.
 	# The smbmnt and smbumount binaries should be setuid-root. This
